--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,52 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Registro.HomeActivity">
 
-    <LinearLayout
-        android:layout_width="380dp"
-        android:layout_height="138dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_marginTop="-10dp"
+        android:layout_height="238dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="@string/email" />
+    <Button
+        android:id="@+id/btn_cerrarSesion"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_below="@+id/img_perfil"
+        android:layout_marginTop="217dp"
+        android:layout_marginBottom="72dp"
+        android:background="@color/naranja"
+        android:text="Cerrar Sesión" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="8dp" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_perfil"
+        android:layout_width="98dp"
+        android:layout_height="90dp"
+        android:layout_below="@+id/imageView3"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="-40dp"
+        android:layout_marginEnd="294dp"
+        android:layout_marginRight="294dp"
+        app:civ_border_color="@color/white"
+        app:civ_border_overlay="true"
+        app:civ_border_width="1dp" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="Proveedor" />
+    <TextView
+        android:id="@+id/correo"
+        android:layout_width="325dp"
+        android:layout_height="32dp"
+        android:layout_alignBottom="@+id/img_perfil"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="-35dp"
+        android:text="@string/email"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="2dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/registrar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/naranja"
-                android:text="Cerrar Sesión" />
-
-        </LinearLayout>
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
