--- a/app/src/main/res/layout/activity_add__libro.xml
+++ b/app/src/main/res/layout/activity_add__libro.xml
@@ -19,8 +19,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.402"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.221" />
+        app:layout_constraintTop_toBottomOf="@+id/titEdit"
+        app:layout_constraintVertical_bias="0.169" />
 
     <EditText
         android:id="@+id/autor"
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/resumen"
+        android:id="@+id/comment"
         android:layout_width="324dp"
         android:layout_height="183dp"
         android:layout_marginTop="20dp"
@@ -56,22 +56,24 @@
 
     <EditText
         android:id="@+id/comentario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="311dp"
+        android:layout_height="114dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/forma_rectangulo"
+        android:gravity="top|start"
         android:ems="10"
-        android:hint="@string/coment"
+        android:padding="16dp"
+        android:hint="@string/comentarioadd"
         android:inputType="textPersonName"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.402"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resumen"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/comment"
+        app:layout_constraintVertical_bias="0.008" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/titEdit"
         android:layout_width="274dp"
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
@@ -113,7 +115,7 @@
         app:civ_border_width="1dp"
         app:layout_constraintBottom_toTopOf="@+id/titulo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/titEdit"
         app:layout_constraintVertical_bias="0.196"
         tools:ignore="MissingConstraints" />
 
