--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -45,7 +45,7 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/resumen"
+        android:id="@+id/comment"
         android:layout_width="323dp"
         android:layout_height="325dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,6 +63,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resumen"
+        app:layout_constraintTop_toBottomOf="@+id/comment"
         app:layout_constraintVertical_bias="0.358" />
 </androidx.constraintlayout.widget.ConstraintLayout>
