--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/btn_cerrarSesion"
+        android:id="@+id/registro"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_below="@+id/img_perfil"
