--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -49,7 +49,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_cerrarSesion"
+            android:id="@+id/registro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
